--- a/_data/reviews/review-pokupka-abonement-na-massazh.yaml
+++ b/_data/reviews/review-pokupka-abonement-na-massazh.yaml
@@ -1,7 +1,7 @@
 ---
 _id: c9fef24e3a1cab9f82737358783dd199b1011633
 name: Наталья
-comment: При покупке абонемент на массаж лучше обращаться в проверенные магазины.
+comment: При покупке абонемента на массаж лучше обращаться в проверенные салоны.
   Поэтому беру - <a href="http://little-buddha.ru/sertifikaty-na-massazh">http://little-buddha.ru/sertifikaty-na-massazh</a>.
 product: pokupka-abonement-na-massazh
 date: "2019-09-11"
