--- a/_data/reviews/review-vybor-indoneziiskaia-mebel.yaml
+++ b/_data/reviews/review-vybor-indoneziiskaia-mebel.yaml
@@ -2,7 +2,7 @@
 _id: 0d194bed532511eae4f8f700a69ff1bd47c2e262
 name: Катя Чернышова
 comment: Слушай, ну если давно хотелось, то, конечно, бери. А вообще лучше заказать
-  мебель индонезии - <a href="https://www.mebelostrov.ru/indoneziya/">https://www.mebelostrov.ru/indoneziya/</a>,
+  мебель Индонезии - <a href="https://www.mebelostrov.ru/indoneziya/">https://www.mebelostrov.ru/indoneziya/</a>,
   широкий выбор и цены отличные.
 product: vybor-indoneziiskaia-mebel
 date: "2019-10-14"
